// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userRoutes /users should not create a new user 1`] = `
Object {
  "data": Array [
    Object {
      "message": "email must be a valid email",
      "name": "email",
    },
    Object {
      "message": "password must be at least 12 characters",
      "name": "password",
    },
    Object {
      "message": "Passwords don't match",
      "name": "confirmPassword",
    },
  ],
  "message": "Request has wrong format.",
}
`;

exports[`userRoutes /users should not create a new user 2`] = `
Object {
  "data": Array [
    Object {
      "message": "username is already taken",
      "name": "username",
    },
    Object {
      "message": "handle is already taken",
      "name": "handle",
    },
    Object {
      "message": "email is already taken",
      "name": "email",
    },
  ],
  "message": "Conflict",
}
`;

exports[`userRoutes /users should not create a new user 3`] = `
Object {
  "data": Array [
    Object {
      "message": "username is a required field",
      "name": "username",
    },
    Object {
      "message": "handle is a required field",
      "name": "handle",
    },
    Object {
      "message": "email is a required field",
      "name": "email",
    },
    Object {
      "message": "password is a required field",
      "name": "password",
    },
    Object {
      "message": "confirmPassword is a required field",
      "name": "confirmPassword",
    },
  ],
  "message": "Request has wrong format.",
}
`;

exports[`userRoutes /users/tokens should throw an error 1`] = `
Object {
  "data": Array [
    Object {
      "message": "email is a required field",
      "name": "email",
    },
    Object {
      "message": "password is a required field",
      "name": "password",
    },
  ],
  "message": "Request has wrong format.",
}
`;
